# beyond-just-coding-book

./: .gitignore  README.md
ch1/simple-shell/: Makefile  shell.cpp
ch1/vim-practice/: .random_conf.conf.swp  randome_conf.conf
ch2/echo/: Makefile  echo.cpp
ch2/shell-practice-data/: names.txt
ch2/simple-shell/: shell.cpp
ch3/3-2/gdb-example/: Makefile  foo.cpp  gdb_example1  main.cpp
ch3/3-2/gdb-example-1/: Makefile  foo.hpp
ch3/3-2/pdb-example/: divide.py  divide_debug_1.py  divide_debug_2.py
ch3/3-3/perf-example/: Makefile  perf_sort_example.cpp  perf_unsort_example.cpp  sort.cpp  unsort.cpp
ch5/5-1/add-example/: Makefile  add1.cpp  add3.cpp  add_test2.cpp
ch5/5-1/cpp-unit-test/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp  test_application.cpp  test_foo.cpp
ch5/5-1/integration-test/report_calculation/: reporter.py
ch5/5-1/py-unit-test/mutliple-tests-in-class/: test_multiple_tests_in_class.py
ch5/5-1/py-unit-test/parameterized/: parameterized_test.py
ch5/5-1/py-unit-test/parameterized-add/: test_parameterized_add.py
ch5/5-1/unit-test/add-example/: Makefile  add2.cpp  add_test1.cpp
ch5/5-1/unit-test/cpp-unit-test/: CMakeLists.txt
ch5/5-1/unit-test/py-unit-test/exception/: test_exception.py
ch5/5-1/unit-test/py-unit-test/fixture/: test_fixture.py
ch5/5-1/unit-test/py-unit-test/mock-api/: test_mock_api.py
ch5/5-1/unit-test/py-unit-test/simple-add/: test_add.py
ch5/5-2/api_with_database/: test_api_with_database.py
ch5/5-2/github-action-demo/: .gitignore  Makefile  test_sum.cpp
ch5/5-2/github-action-demo/.github/workflows/: build.yml  test.yml
ch5/5-2/report_calculation/: data_provider.py  integration_test.py
ch5/5-3/clang-format/: .clang-format  clang_format_applied.cpp  clang_format_original.cpp
ch5/5-3/flake8/: .flake8  flake8_demo.py
ch5/5-3/ruff/: ruff_demo_applied.py  ruff_demo_original.py
